; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/extr_builtin-help.c_check_emacsclient_version.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/extr_builtin-help.c_check_emacsclient_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64 }
%struct.child_process = type { i8**, i32, i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@.str = private unnamed_addr constant [12 x i8] c"emacsclient\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"--version\00", align 1
@__const.check_emacsclient_version.argv_ec = private unnamed_addr constant [3 x i8*] [i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i32 0, i32 0), i8* null], align 16
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [30 x i8] c"Failed to start emacsclient.\0A\00", align 1
@.str.3 = private unnamed_addr constant [36 x i8] c"Failed to read emacsclient version\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"Failed to parse emacsclient version.\0A\00", align 1
@.str.5 = private unnamed_addr constant [42 x i8] c"emacsclient version '%d' too old (< 22).\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_emacsclient_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_emacsclient_version() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.strbuf, align 8
  %3 = alloca %struct.child_process, align 8
  %4 = alloca [3 x i8*], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = bitcast %struct.strbuf* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %7, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %8 = bitcast [3 x i8*]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %8, i8* align 16 bitcast ([3 x i8*]* @__const.check_emacsclient_version.argv_ec to i8*), i64 24, i1 false)
  store i32 -1, i32* %6, align 4
  %9 = call i32 @memset(%struct.child_process* %3, i32 0, i32 16)
  %10 = getelementptr inbounds [3 x i8*], [3 x i8*]* %4, i64 0, i64 0
  %11 = getelementptr inbounds %struct.child_process, %struct.child_process* %3, i32 0, i32 0
  store i8** %10, i8*** %11, align 8
  %12 = getelementptr inbounds %struct.child_process, %struct.child_process* %3, i32 0, i32 1
  store i32 -1, i32* %12, align 8
  %13 = getelementptr inbounds %struct.child_process, %struct.child_process* %3, i32 0, i32 2
  store i32 1, i32* %13, align 4
  %14 = call i64 @start_command(%struct.child_process* %3)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %0
  %17 = load i32, i32* @stderr, align 4
  %18 = call i32 (i32, i8*, ...) @fprintf(i32 %17, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %56

19:                                               ; preds = %0
  %20 = getelementptr inbounds %struct.child_process, %struct.child_process* %3, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i64 @strbuf_read(%struct.strbuf* %2, i32 %21, i32 20)
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %19
  %25 = load i32, i32* @stderr, align 4
  %26 = call i32 (i32, i8*, ...) @fprintf(i32 %25, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0))
  br label %53

27:                                               ; preds = %19
  %28 = getelementptr inbounds %struct.child_process, %struct.child_process* %3, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @close(i32 %29)
  %31 = call i32 @finish_command(%struct.child_process* %3)
  %32 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %2, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @strstarts(i64 %33, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %39, label %36

36:                                               ; preds = %27
  %37 = load i32, i32* @stderr, align 4
  %38 = call i32 (i32, i8*, ...) @fprintf(i32 %37, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  br label %53

39:                                               ; preds = %27
  %40 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %2, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = call i64 @strlen(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %43 = add nsw i64 %41, %42
  %44 = call i32 @atoi(i64 %43)
  store i32 %44, i32* %5, align 4
  %45 = load i32, i32* %5, align 4
  %46 = icmp slt i32 %45, 22
  br i1 %46, label %47, label %51

47:                                               ; preds = %39
  %48 = load i32, i32* @stderr, align 4
  %49 = load i32, i32* %5, align 4
  %50 = call i32 (i32, i8*, ...) @fprintf(i32 %48, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.5, i64 0, i64 0), i32 %49)
  br label %52

51:                                               ; preds = %39
  store i32 0, i32* %6, align 4
  br label %52

52:                                               ; preds = %51, %47
  br label %53

53:                                               ; preds = %52, %36, %24
  %54 = call i32 @strbuf_release(%struct.strbuf* %2)
  %55 = load i32, i32* %6, align 4
  store i32 %55, i32* %1, align 4
  br label %56

56:                                               ; preds = %53, %16
  %57 = load i32, i32* %1, align 4
  ret i32 %57
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @memset(%struct.child_process*, i32, i32) #2

declare dso_local i64 @start_command(%struct.child_process*) #2

declare dso_local i32 @fprintf(i32, i8*, ...) #2

declare dso_local i64 @strbuf_read(%struct.strbuf*, i32, i32) #2

declare dso_local i32 @close(i32) #2

declare dso_local i32 @finish_command(%struct.child_process*) #2

declare dso_local i32 @strstarts(i64, i8*) #2

declare dso_local i32 @atoi(i64) #2

declare dso_local i64 @strlen(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
